[package]
name = "distr"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Distr authors"]
description = "distr - A Web Server with simplicity."
documentation = "https://docs.rs/distr/0.1.0"
repository = "https://github.com/coca-labs/distr"
keywords = ["distr", "web", "server", "nginx", "caddy", "auto", "https"]


[[bin]]
name = "distr"
path = "bin/distr.rs"

[lib]
name = "libdistr"
path = "src/lib.rs"

[dependencies]
acme-micro = "0.12"
env_logger = "0.9"
futures = "0.3"
nginx-config = "0.13"
ntex = { version = "0.6", features = ["tokio", "rustls"] }
ntex-files = { package = "clia-ntex-files-mod", version = "0.2" }
ntex-session = { package = "clia-ntex-session", version = "0.2" }
# openssl = "0.10"
rustls = "0.20"
rustls-pemfile = "0.3"
serde = "1"
tokio = { version = "1", features = ["full"] }
